# CCIsland

./: .gitignore  install.sh  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
.serena/: project.yml
changelog/: CHANGELOG.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: approval_manager.rs  hook_installer.rs  hook_router.rs  hook_server.rs  main.rs  shared_types.rs  tray.rs  window_state.rs
src/main/: hook-installer.ts  hook-router.ts  hook-server.ts  index.ts  ipc-handlers.ts  session-state.ts  tray.ts  window-manager.ts
src/renderer/: app.ts  index.html  preload.ts  styles.css  styles.less  tauri-bridge.ts  window.d.ts
src/shared/: types.ts
