[package]
name = "cc-island-tauri-poc"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }

